--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,11 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Imports: 
     stringr,
-	glue,
-	usethis,
-	utils,
-	knitr
+    glue,
+    usethis,
+    utils,
+    knitr,
+    performance
 VignetteBuilder: knitr
+Depends: 
+    R (>= 2.10)
