--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,10 @@ Imports:
     gghighlight,
     ggridges,
     ggforce,
-	multcomp
+	multcomp,
+	DT
 VignetteBuilder: knitr
 Depends: 
     R (>= 2.10)
+Suggests: 
+    rmarkdown
