--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: SfL
 Title: Statistics for Linguistics
 Version: 0.1
+Date: 2021-07-27
 Authors@R: c(
     person("Dominic", "Schmitz", email = "contact@dominicschmitz.com", role = c("aut", "cre")),
     person("Janina", "Esser", email = "contact@dominicschmitz.com", role = "aut"))
