--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,5 @@ export(correlation_matrix)
 export(create_error_bar_df)
 export(open_exercises)
 export(predictor_competition)
+export(predictor_strength)
 export(tukey)
