--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,14 +3,17 @@
 export(corfun)
 export(correlation_matrix)
 export(create_error_bar_df)
+export(heteroscedasticity_check)
 export(mode_stat)
 export(multinomial_p)
+export(normality_check)
 export(open_exercise)
 export(open_exercises)
 export(open_slide)
 export(open_slides)
 export(ordinal_p)
 export(predictor_competition)
+export(predictor_competition2)
 export(predictor_strength)
 export(se)
 export(tukey)
