--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(open_exercises)
 export(open_slide)
 export(open_slides)
 export(ordinal_p)
+export(pairwise_wilcox)
 export(predictor_competition)
 export(predictor_competition2)
 export(predictor_strength)
